[package]
name = "raylib_imgui_rs"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE.txt"
description = "A Raylib integration with DearImGui in Rust!"
homepage = "https://github.com/Fullbrik/raylib_imgui_rs"
repository = "https://github.com/Fullbrik/raylib_imgui_rs"
readme = "readme.md"
keywords = ["gamedev", "graphics", "raylib", "imgui"]

exclude = [
    ".idea/*"
]

[dependencies]
raylib = "5.0"
imgui = "0.12"